# job_test_ocr

./: eng_extra_dict  main.py  pyproject.toml  readme
